Fixed layout alignment

--- a/sources/layout-item.scss
+++ b/sources/layout-item.scss
@@ -4,6 +4,7 @@ layout-item {
 }
 
 .bf-item-content {
+    display: inline-table;
     width: 100%;    
     height: 100%;
     min-width: 100px;
