--- a/sources/uiml-parts.scss
+++ b/sources/uiml-parts.scss
@@ -3,3 +3,6 @@
 }
 .column {
 }
+.item {
+    vertical-align: top;
+}
